<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioTest</string>
    <string name="action_soundpool">Use SoundPool load</string>
    <string name="action_trackrecord">Use AudioTrack load</string>
    <string name="action_mediaplayer">Use MediaPlayer load</string>
    <string name="action_combined">Use combined load</string>

	<string name="mode_incall">In call</string>
	<string name="mode_normal">Normal</string>
	<string name="mode_incomm">In comm</string>
    <string name="mode_ring">Ring</string>
	
	<string name="play">▶️</string>
    <string name="pause">⏸</string>
	<string name="stop">⏹️</string>
	
	<string name="route_off">All off</string>
	<string name="route_speaker">Speaker</string>
	<string name="route_start_bt">Start BT</string>
	<string name="route_sco">BT SCO</string>
	<string name="route_speaker_off">Speaker off</string>
	<string name="route_stop_bt">Stop BT</string>
	<string name="route_sco_off">BT SCO off</string>
    <string name="audio_focus_lose">AudioFocus lose</string>
    <string name="audio_focus_gain">AudioFocus gain</string>
	
	<string name="stream_default">Default</string>
	<string name="stream_music">Music</string>
	<string name="stream_voice">Voice call</string>
    <string name="stream_ring">Ringtone</string>
	
	<string name="use_16k">Use 16k</string>
    <string name="use_rec">record</string>
    <string name="title_audiomanager_route">AudioManager route:</string>
    <string name="title_audiomanager_mode">AudioManager mode:</string>

</resources>
