<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_trackrecord"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_trackrecord"/>

    <item
        android:id="@+id/action_soundpool"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_soundpool"/>

    <item
        android:id="@+id/action_mediaplayer"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_mediaplayer"/>
    <item
        android:id="@+id/action_combined"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_combined"/>
</menu>
